style.css
/* colors */

.black {
	background-color: #000000;
}

.text_black {
	color: #000000;
}

.white {
	background-color: #ffffff;
}

.text_white {
	color: #ffffff;
}

.purple {
	background-color: #710880;
}

.text_purple, div.regular_text_block {
	color: #710880;
}

.yellow, div.button {
	background-color: #f8ac00;
}

.text_yellow {
	color: #f8ac00;
}

.mint {
	background-color: #00ffc5;
}

.text_mint {
	color: #00ffc5;
}


/* fonts */

@font-face {
	font-family: LeagueSpartan-Bold;
	src: url('fonts/LeagueSpartan-Bold.ttf');
}

@font-face {
	font-family: AvenirNextLTPro-Bold;
	src: url('fonts/AvenirNextLTPro-Bold.otf');
}

/* @font-face {
	font-family: AvenirNextLTPro-Regular;
	src: url('fonts/AvenirNextLTPro-Regular.otf');
} */

div {
	font-family: AvenirNextLTPro-Bold, LeagueSpartan-Bold, Tahoma, Verdana, Arial, sans-serif;
	font-weight: bold;
}

div.hero_link_row > span, div.hero_text {
	text-transform: uppercase;
}

div.hero_text {
	font-family: LeagueSpartan-Bold, AvenirNextLTPro-Bold, Tahoma, Verdana, Arial, sans-serif;
	font-size: 300%;
}

div.regular_text_block {
	font-size: 150%;
}

div.button {
	text-transform: uppercase;
	font-size: 125%;
}

div.footer {
	text-transform: uppercase;
}


/* links */

span.link, div.link, div.button {
	cursor: pointer;
}

span.link:hover, div.link:hover, div.link:hover > div.button, div.button:hover {
	text-decoration: underline;
}


/* structural */

body {
	margin: 0;
}

img {
	/* get rid of empty area below images */
	display: block;
}

div.hero {
	position: relative;
}

div.hero > div.button {
	left: unset;
	top: unset;
	right: 10%;
	bottom: 40pt;
}

div.hero_link_row {
	position: absolute;
	top: 5pt;
	text-align: center;
	width: 100%;
}

div.hero_link_row > span {
	margin-left: 10pt;
	margin-right: 10pt;
}

img.hero {
	width: 100%;
	opacity: 0.5;
}

img.hero_logo {
	width: 15%;
	position: absolute;
	right: 61%;
	top: 0;
	bottom: 0;
	margin-top: auto;
	margin-bottom: auto;
}

div.hero_text {
	position: absolute;
	left: 40%;
}

div.hero_text.top_row {
	bottom: 50%;
}

div.hero_text.bottom_row {
	top: 50%;
}

div.button {
	display: inline-block;
	transform: rotate(-2deg);
	padding: 3pt 12pt;
	text-align: center;
	position: absolute;
	bottom: 0;
	top: 0;
	left: 0;
	right: 0;
	margin: auto;
	height: 19pt;
	width: 200pt;
}

div.button.two_rows {
	height: 36pt;
}

div.button.slim {
	width: 100pt;
}

div.columns_two {
	clear: both;
}

div.columns_two > div {
	width: 49%;
	display: inline-block;
}

div.columns_two > div.right {
	float: right;
}

div.linkpic {
	position: relative;
	margin-bottom: 5pt;
}

div.linkpic > img {
	width: 100%;
	opacity: 0.5;
}

div.main_column {
	max-width: 500pt;
	margin-left: auto;
	margin-right: auto;
	padding-left: 10pt;
	padding-right: 10pt;
}

div.hero, div.regular_text_block, div.picture_link_block {
	margin-bottom: 50pt;
}

div.regular_text_block {
	word-break: break-word;
	hyphens: auto;
	text-align: justify;
}

div.footer {
	text-align: center;
	margin-bottom: 50pt;
	position: relative;
}

div.footer > span.link {
	line-height: 70pt;
	vertical-align: top;
}

div.footer > img {
	height: 70pt;
	position: absolute;
	right: 10%;
	top: 0;
}

/* adjustments based on screen size */

@media only screen and (max-width : 70em) {
	div.hero_text {
		font-size: 200%;
	}
}

@media only screen and (max-width : 50em) {
	div.hero_text {
		font-size: 150%;
	}

	div.regular_text_block {
		font-size: 125%;
	}

	div.hero > div.button {
		bottom: 30pt;
		font-size: 110%;
		height: 17pt;
	}
}

@media only screen and (max-width : 40em) {
	div.hero_text {
		font-size: 125%;
	}

	div.hero_link_row {
		font-size: 80%;
	}

	div.hero > div.button {
		bottom: 20pt;
		font-size: 100%;
		height: 14.5pt;
	}

	div.columns_two > div {
		width: 100%;
	}

	div.columns_two > div.right {
		float: unset;
	}
}

@media only screen and (max-width : 30em) {
	div.regular_text_block {
		font-size: 100%;
	}

	div.hero > div.button {
		bottom: 10pt;
		font-size: 90%;
		height: 13pt;
	}
}

